--- a/style.css
+++ b/style.css
@@ -2,33 +2,61 @@ body{
 	/*background-color: black;*/
 	text-align: center;
 	margin: 0px;
+	background-color: green;
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	font-size: 2em;
 }
 div{
-	height: 500px;
-	width: 500px;
 	display: inline-block;
+}
+button{
+	display: inline-block;
+	position: absolute;
+	padding: 10px;
+	bottom: 6%;
+	left: 45%;
 }
 #container{
 	background-color: black;
+	height: 550px;
+	width: 900px;
+	position: relative;
+	text-align: center;
 }
 #board{
-	background-color: red;
-	height: 300px;
-	width: 300px;
+	height: 500px;
+	width: 900px;
 /*	overflow: visible;*/
-	position: absolute;
+	position: relative;
+	background-image: url("images/blackjacktable.png");
+	background-size: contain;
+	background-repeat: no-repeat
 }
 #dealer{
 	background-color: white;
-	height: 100px;
-	width: 100px;
-	position: relative;
+	height: 98px;
+	width: 70px;
+	position: absolute;
+	bottom: 68%;
+	left: 46%;
 }
 #player{
 	background-color: white;
-	height: 100px;
-	width: 100px;
-	position: relative;
-	top: 80%;
-	right: 10%;
+	height: 98px;
+	width: 70px;
+	position: absolute;
+	bottom: 27%;
+	left: 46%;
+}
+#start{
+	display: inline-block;
+	position: absolute;
+	left: 46%;
+}
+#playagain{
+
+}
+#score{
+	/*display: inline-block;*/
+	/*position: absolute;*/
 }
