--- a/style.css
+++ b/style.css
@@ -76,8 +76,15 @@ h1, h3{
 	position: relative;
 	top: -12%;
 }
-#done{
-
+#start {
+	position: relative;
+	left: 7px;
+	bottom: 5.8%;
+}
+.done{
+	position: absolute;
+	left: 47%;
+	/*bottom: 26%;*/
 }
 .hit {
 	bottom: 7%;
@@ -87,10 +94,18 @@ h1, h3{
 	bottom: 7%;
 	left: 55%;
 }
+.a1 {
+	bottom: 8%;
+	left: 38%;
+}
+.a11 {
+	bottom: 8%;
+	left: 55%;
+}
 .dealt {
 	background-size: contain;
-	height: 100px;
-	width: 72px;
+	height: 102.7px;
+	width: 73.4px;
 	/*background-color: blue;*/
 	position: relative;
 }
